# vectordb-explorer

./: README.md
backend/: README.md  pyproject.toml
backend/chroma/: chroma.sqlite3
backend/chroma/7d8f5d98-2ce0-48bc-b58e-c03463eeba02/: chroma.sqlite3
backend/chroma/admin/: chroma.sqlite3
backend/src/backend/: __init__.py  api.py  auth.py  client.py  extractor.py  fileio.py  middleware.py  types.py  userdb.py
backend/tests/: test_extractor.py  test_filedb.py  test_userdb.py
frontend/: mainwindow.py  mainwindow.ui
sample/chroma/: chroma.sqlite3
sample/sample_files/: name.txt
